refactor(list-to-object): Refactored all endpoints returning lists (#49)
* refactor(list-to-object): Refactored all endpoints returning lists (search, apis, applications, suggestions)
